syntax = "proto3";

package com.julianhaeh.hospital.system.grpc;
option java_package = "com.julianhaeh.hospital.system.grpc";
option java_multiple_files = true;

import "google/protobuf/empty.proto";

// --- Messages for Hospital-CRUD ---

message Hospital {
  int64  id         = 1;
  string name       = 2;
  string address    = 3;
}

message CreateHospitalRequest {
  string name    = 1;
  string address = 2;
}

message ModifyHospitalRequest {
  int64  hospital_id = 1;
  string name        = 2;
  string address     = 3;
}

message DeleteHospitalRequest {
  int64 hospital_id = 1;
}

// --- Messages for Patient-CRUD ---

message Patient {
  int64  id         = 1;
  string first_name = 2;
  string last_name  = 3;
  string birth_date = 4;
}

message CreatePatientRequest {
  string first_name = 1;
  string last_name  = 2;
  string birth_date = 3;
}

message ModifyPatientRequest {
  int64  patient_id = 1;
  string first_name = 2;
  string last_name  = 3;
  string birth_date = 4;
}

message DeletePatientRequest {
  int64 patient_id = 1;
}

// --- Messages for registration---

message Registration {
  int64 hospital_id = 1;
  int64 patient_id = 2;
}

message RegisterPatientRequest {
  int64 hospital_id = 1;
  int64 patient_id  = 2;
}

// --- Messages for listing---

message ListPatientsRequest {
  int64 hospital_id = 1;
}

message PatientList {
  repeated Patient patients = 1;
}

message ListHospitalsRequest {
  int64 patient_id = 1;
}

message HospitalList {
  repeated Hospital hospitals = 1;
}

// --- Service-Definition ---

service HospitalService {
  // Hospital-CRUD
  rpc CreateHospital(CreateHospitalRequest)            returns (Hospital);
  rpc ModifyHospital(ModifyHospitalRequest)            returns (Hospital);
  rpc DeleteHospital(DeleteHospitalRequest)            returns (google.protobuf.Empty);

  // Patient-CRUD
  rpc CreatePatient(CreatePatientRequest)              returns (Patient);
  rpc ModifyPatient(ModifyPatientRequest)              returns (Patient);
  rpc DeletePatient(DeletePatientRequest)              returns (google.protobuf.Empty);

  // Registration
  rpc RegisterPatient(RegisterPatientRequest)          returns (Registration);
  rpc UnregisterPatient(RegisterPatientRequest)        returns (google.protobuf.Empty);
  // Lists
  rpc ListPatientsOfHospital(ListPatientsRequest)       returns (PatientList);
  rpc ListHospitalsOfPatient(ListHospitalsRequest)      returns (HospitalList);
}

